--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,117 @@
+@import './styles/index';
+
 .App {
-  font-size: 25px;
+  padding: 14px 16px 28px;
+  background-color: $main-background;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  max-width: 1200px;
+
+  @include screen1024 {
+    display: block;
+    padding-top: 30px;
+    margin: 0 auto;
+  }
+
+  &__container-out {
+    display: block;
+
+    @include screen1024 {
+      display: flex;
+      flex-grow: 1;
+      justify-content: space-between;
+    }
+  }
+
+  &__container-in {
+    @include screen1024 {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    }
+  }
+
+  &__title {
+    min-width: 314px;
+    text-align: center;
+    margin-bottom: 14px;
+
+    @extend %mainTitle;
+
+    @include screen1024 {
+      text-align: left;
+    }
+  }
+
+  &__logo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 11px;
+
+    &-image {
+      height: 32px;
+      width: 32px;
+      display: inline-block;
+      margin-right: 15px;
+    }
+
+    &-text {
+      min-width: 187px;
+      @extend %logoText;
+
+      @include screen1024 {
+        margin-right: 19px;
+      }
+    }
+  }
+
+  &__selector {
+    display: flex;
+    justify-content: center;
+    
+    &-container {
+      margin-bottom: 18px;
+      border: 1.5px solid #000000;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      width: 357px;
+      height: 44px;
+    }
+  }
+  
+  &__choice {
+    @extend %selectorText;
+    padding-left: 14px;
+    line-height: 36px;
+    text-align: left;
+    padding-top: 2px;
+    border: none;
+    background-color: $main-background;
+    z-index: 1;
+
+    &:hover {
+      background-color: rgb(228, 218, 218);
+      border-radius: 5px;
+      color: tomato;
+    }
+    
+    &:first-child {
+      border-bottom: 1.5px solid #000000;
+      border-radius: 5px;
+      padding-bottom: 3px;
+    }
+    
+    &:not(:first-child) {
+      padding-left: 44px;
+    }
+
+    &-image {
+      width: 14px;
+      height: 7px;
+      margin-right: 16px;
+    }
+  }
 }
