--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,3 +4,4 @@ $background-of-event: #E9E9E9;
 $background-active-published-button: #4285F4;
 $color-active-published-add-button: #FFFFFF;
 $background-button-add: #4ADE80;
+$background-button-add-disabled: rgb(121, 116, 116);
