--- a/src/App.scss
+++ b/src/App.scss
@@ -73,8 +73,6 @@
     
     &-container {
       margin-bottom: 18px;
-      border: 1.5px solid #000000;
-      border-radius: 5px;
       display: flex;
       flex-direction: column;
       width: 357px;
@@ -91,6 +89,7 @@
     border: none;
     background-color: $main-background;
     z-index: 1;
+    border: 1.5px solid black;
 
     &:hover {
       background-color: rgb(228, 218, 218);
@@ -99,8 +98,7 @@
     }
     
     &:first-child {
-      border-bottom: 1.5px solid #000000;
-      border-radius: 5px;
+      border-radius: 5px 5px 0 0;
       padding-bottom: 3px;
     }
     
