--- a/src/components/GroupEventsButtons/GroupEventsButtons.scss
+++ b/src/components/GroupEventsButtons/GroupEventsButtons.scss
@@ -123,6 +123,7 @@
     top: 85vh;
     width: 350px;
     height: 69px;
+    cursor: pointer;
 
     background: $background-button-add;
     border-radius: 57px;
@@ -135,9 +136,26 @@
     @include screen1024 {
       position: absolute;
       top: 95px;
-      right: 15px;
+      right: 18px;
       width: 233px;
       height: 69px;
+    }
+    
+    &:hover {
+      background-color: #21bb5a;
+    }
+    
+    &:active {
+      border: 2px solid black;
+    }
+
+    &--disabled {
+      background-color: $background-button-add-disabled;
+      
+      &:hover {
+        background-color: $background-button-add-disabled;
+        cursor: auto;
+      }
     }
   }
 
