--- a/src/components/CorrectWindow/CorrectWindow.scss
+++ b/src/components/CorrectWindow/CorrectWindow.scss
@@ -2,10 +2,11 @@
 
 .CorrectWindow {
   &__window-add {
+    margin-bottom: 15px;
+
     display: flex;
     flex-direction: column;
     justify-content:space-between;
-    margin-bottom: 15px;
 
     width: 172px;
     height: 125px;
@@ -15,8 +16,17 @@
     display: flex;
     flex-grow: 1;
     align-items: center;
+
     background-color: $main-background;
     z-index: 1;
+
+    &:hover {
+      background-color: grey;
+    }
+
+    &:active {
+      outline: auto;
+    }
     
     &:first-child {
       border: 2px solid #CECECE;
@@ -24,10 +34,18 @@
     }
 
     &:last-child {
-      box-sizing: content-box;
       background-color: #FF4A4A;
       border-color: #FF4A4A;
       border-radius: 0px 0px 10px 10px;
+
+      &:hover {
+        background-color: rgb(0, 17, 255);
+      }
+
+      &:active {
+        background-color: rgb(91, 98, 190);
+        outline: auto;
+      }
     }
 
     &-middle {
@@ -37,8 +55,7 @@
   }
 
   &__correct-image {
-    margin-left: 13px;
-    margin-right: 13px;
+    margin: 0 13px;
     width: 18px;
     height: 20px;
   }
